@@ -238,6 +238,9 @@ entity-filters=Entity filters
 exclude-from-future-blueprints=Exclude current stage from future blueprints [img=info]
 exclude-from-future-blueprints-tooltip=Entities in this stage will not be present in later stage blueprints. However, entity UPDATES will still be present.
 
+custom-blueprint-name=Custom blueprint name:
+custom-blueprint-name-tooltip=If unchecked, uses the stage name.
+
 include-entities-in-the-next-n-stages-1=Only include entities changed in the last
 include-entities-in-the-next-n-stages-2=stages [img=info]
 include-entities-in-the-next-n-stages-tooltip=Only new entities or entities with setting changes in the last given stages will be included in the blueprint.\n - Consider adding entities to help align blueprints to the below allowlist, such as rails or roboports.\n - Consider adding assembling machines to the allowlist, so previously unresearched recipes can be pasted by later blueprints.\n
